syntax = "proto3";

import "player.proto";

message OptimizerRequest {
    repeated string player_id_locks = 1;

    repeated string player_id_excludes = 2;
    
    float randomness = 3;

    int32 num_lineups = 4;

    bool stack = 5;
}

message OptimizerResponse {
    repeated Lineup lineups = 1;
}

message GetPlayersRequest {}

message GetPlayersResponse {
    Players players = 1;
}